Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -34,18 +34,25 @@
     </div>
 
     <main class="content">
-        <h1>AUDIOVISUALES</h1>
+  <h1>AUDIOVISUALES</h1>
+  <button class="toggle-btn" data-target="video-container">
+    Ver audiovisuales
+  </button>
 
-        <!-- Lista de videos cargados desde JSON -->
-        <div class="video-list" id="video-container"></div>
+  <!-- Lista de videos cargados desde JSON -->
+  <div class="video-list" id="video-container"></div>
 
-        <br>
-        <h1>FOTOGRAFÍAS</h1>
+  <br>
 
+  <h1>FOTOGRAFÍAS</h1>
+  <button class="toggle-btn" data-target="gallery">
+    Ver fotografías
+  </button>
 
-        <!-- Galería de imágenes desde Google Drive -->
-        <div class="photo-list" id="gallery"></div>
-    </main>
+  <!-- Galería de imágenes desde Google Drive -->
+  <div class="photo-list" id="gallery"></div>
+</main>
+
 
     <footer class="footer">
         <div class="footer-info">
